--- a/docs/index.css
+++ b/docs/index.css
@@ -13,7 +13,6 @@ body {
 header {
     background-color: #333;
     color: #fff;
-    padding: 10px 0;
 }
 
 nav .container {
@@ -64,56 +63,73 @@ nav ul li a:hover {
     background-color: #ff4b39;
 }
 
+main {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 main .container {
     width: 80%;
     margin: 20px auto;
     display: flex;
+    flex-wrap: wrap;
 }
 
 .sidebar {
-    width: fit-content;
-    background: #fff;
-    padding: 20px;
-    border-right: 2px solid #ddd;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: calc(60vh - 60px);
+    width: fit-content; 
+    height: fit-content;
+    min-width: 250px;
+    min-height: 500px;
+    padding: 10px;
+    background-color: #f8f9fa;
+    border-radius: 8px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
+
 .sidebar h2 {
-    margin-top: 0;
+    font-size: 1.5em;
+    margin-bottom: 20px;
 }
 
 .filter-label {
     display: block;
     margin-bottom: 10px;
-    font-size: 14px;
-    color: #333;
 }
 
+
 .content {
-    width: 75%; 
-    padding: 20px;
+    flex: 1;
+    margin-left: 20px;
 }
 
 .anime-list {
     display: flex;
     flex-wrap: wrap;
-    justify-content: left; 
+    gap: 20px;
 }
 
 .anime-item {
-    background: #fff;
+    width: calc(33.33% - 20px);
+    background-color: #fff;
+    padding: 20px;
     border: 1px solid #ddd;
-    margin: 10px;
-    padding: 10px;
-    text-align: center;
-    width: fit-content; 
-    box-sizing: content-box; 
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    text-align: left;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
 }
 
 .anime-item img {
-    max-width: 100%;
+    width: 150px;
+    height: 150px;
+    object-fit: cover;
+    margin-bottom: 15px;
 }
 
 .submit-button {
@@ -138,34 +154,110 @@ footer {
     color: #fff;
     text-align: center;
     padding: 10px 0;
-    position: fixed;
+    position: relative;
     width: 100%;
-    bottom: 0;
+    margin-top: auto;
+}
+
+@media (max-width: 1400px) {
+
+
+    .content {
+        width: 100%; 
+        padding: 10px;
+    }
+
+    .anime-item {
+        width: calc(50% - 20px); 
+        margin: 5px 0; 
+    }
+
+    nav h1 {
+        font-size: 1.2em; 
+    }
+
+    nav ul {
+        flex-direction: column;
+    }
+
+    nav ul li {
+        margin-left: 0;
+        margin-top: 5px;
+    }
+}
+
+@media (max-width: 1000px) {
+
+
+    .content {
+        width: 100%; 
+        padding: 10px;
+        justify-content: left;
+    }
+
+    .anime-item {
+        width: 75%; 
+        margin: 5px 0; 
+        justify-content: center;
+    }
+
+    nav h1 {
+        font-size: 1.2em; 
+    }
+
+    nav ul {
+        flex-direction: column;
+    }
+
+    nav ul li {
+        margin-left: 0;
+        margin-top: 5px;
+    }
 }
 
 @media (max-width: 768px) {
 
+    main .container {
+        flex-direction: column; 
+    }
 
     .sidebar {
-        width: fit-content;
-        border-right: none;
-        border-bottom: 2px solid #ddd;
+        width: 100%; 
         margin-bottom: 20px;
+        border-right: none;
     }
 
     .content {
-        width: 100%;
+        width: 100%; 
+        padding: 10px;
     }
 
     .anime-item {
-        width: fit-content;
+        width: calc(50% - 20px); 
+        margin: 5px 0; 
+        justify-content: center;
+
+    }
+
+    nav h1 {
+        font-size: 1.2em; 
+    }
+
+    nav ul {
+        flex-direction: column;
+    }
+
+    nav ul li {
+        margin-left: 0;
+        margin-top: 5px;
     }
 }
 
-@media (max-width: 480px) {
+@media (max-width: 600px) {
     .anime-item {
-        width: fit-content;
+        width: 100%; 
         margin: 5px 0;
+        justify-content: center;
     }
 
     nav h1 {
@@ -174,5 +266,12 @@ footer {
 
     nav ul {
         flex-direction: row;
+        justify-content: center;
     }
+    .sidebar {
+        width: 100%;
+        margin-bottom: 20px;
+        border-right: none;
+    }
+
 }
