--- a/docs/login.css
+++ b/docs/login.css
@@ -4,13 +4,15 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f4f4f4;
+    background-color: #dddddd;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
 header {
     background-color: #333;
     color: #fff;
-    padding: 10px 0;
 }
 
 nav .container {
