--- a/docs/sobre.css
+++ b/docs/sobre.css
@@ -4,13 +4,23 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f4f4f4;
+    background-color: #dddddd;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+main {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 header {
     background-color: #333;
     color: #fff;
-    padding: 10px 0;
 }
 
 nav .container {
@@ -34,7 +44,7 @@ nav ul {
 }
 
 nav ul li {
-    margin-left: 10px;
+    margin-left: 20px;
 }
 
 nav ul li a {
@@ -83,9 +93,8 @@ footer {
     color: #fff;
     text-align: center;
     padding: 10px 0;
-    position: fixed;
+    position: relative;
     width: 100%;
-    bottom: 0;
 }
 
 @media (max-width: 768px) {
